feat: Introduce new website sections and navigation
Expands the website to include dedicated sections for Departments, Property Consulting, and IT Solutions. Updates the navigation header and localization files to reflect these new areas, providing a more comprehensive overview of Bozorgi Group's diverse business offerings.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -1,21 +1,39 @@
 {
     "header.about": "معلومات عنا",
-    "header.products": "المنتجات",
+    "header.products": "مواد البناء",
+    "header.property": "العقارات",
+    "header.it": "حلول تقنية",
     "header.history": "التاريخ",
-    "header.humanity": "الإنسانية أولاً",
+    "header.humanity": "الإنسانية",
     "header.contact": "اتصل بنا",
-    "hero.subtitle": "خبراء عالميون في توريد الأخشاب والاستشارات الاستراتيجية",
+    "hero.subtitle": "خبراء عالميون في توريد الأخشاب، والاستشارات العقارية، وحلول تكنولوجيا المعلومات",
     "hero.motto": "تجارة بلا حدود",
     "hero.scroll": "اكتشف المزيد",
     "about.title": "عن مجموعة بزرگی",
-    "about.description": "منذ عام 1988، تعمل مجموعة بزرگی تحت شعار \"تجارة بلا حدود\". نحن شركة تجارية رائدة متخصصة في الاستيراد والتصدير والتوزيع الاستراتيجي لمواد البناء عالية الجودة في جميع أنحاء العالم.",
+    "about.description": "منذ عام 1988، تعمل مجموعة بزرگی تحت شعار \"تجارة بلا حدود\". لقد تطورنا إلى تكتل متعدد الأوجه متخصص في مواد البناء، والاستشارات العقارية، وحلول تكنولوجيا المعلومات.",
     "about.missionTitle": "مهمتنا",
-    "about.missionText": "توريد مواد بناء فائقة الجودة بخدمة لا مثيل لها وأسعار تنافسية، وتوسيع بصمتنا العالمية من خلال أنظمة إدارة دولية متقدمة.",
+    "about.missionText": "توريد مواد بناء فائقة الجودة، وتقديم مشورة عقارية خبيرة، وحلول تكنولوجيا معلومات متطورة مع خدمة ونزاهة لا مثيل لهما.",
     "about.visionTitle": "رؤيتنا",
-    "about.visionText": "قيادة سوق مواد البناء العالمي من خلال الحفاظ على قيمنا الأساسية المتمثلة في الصدق والشفافية والتميز التشغيلي.",
+    "about.visionText": "القيادة عالميًا عبر ركائز أعمالنا الثلاث من خلال الحفاظ على قيمنا الأساسية المتمثلة في الصدق والشفافية والتميز التشغيلي.",
     "about.valuesTitle": "القيم الأساسية",
     "about.valuesText": "الصدق، الولاء، الوضوح، والتعلم المستمر. نحن نعطي الأولوية للإنسانية والمنفعة المتبادلة، ونعزز العلاقات الشفافة مع جميع شركائنا.",
-    "products.title": "منتجاتنا",
+    "departments.title": "أقسام أعمالنا",
+    "departments.subtitle": "ثلاثة أقسام متميزة تعمل في انسجام لتقديم التميز.",
+    "departments.materials.title": "مواد البناء",
+    "departments.materials.desc": "التوريد العالمي، والاستيراد / التصدير، والاستشارات الخبيرة للأخشاب ومواد البناء.",
+    "departments.property.title": "الاستشارات العقارية",
+    "departments.property.desc": "مشورة استراتيجية للاستثمار العقاري، والإدارة، والبيع، والشراء، والتأجير.",
+    "departments.it.title": "حلول تكنولوجيا المعلومات والذكاء الاصطناعي",
+    "departments.it.desc": "خدمات الذكاء الاصطناعي والأتمتة والتسويق الرقمي المتطورة لتمكين الشركات.",
+    "it.title": "تكنولوجيا المعلومات والذكاء الاصطناعي والتحول الرقمي",
+    "it.subtitle": "الاستفادة من قوة الذكاء الاصطناعي والأتمتة لدفع نمو الأعمال.",
+    "it.ai.title": "الذكاء الاصطناعي والأتمتة",
+    "it.ai.desc": "نقوم بتنفيذ وكلاء أذكياء وأتمتة سير العمل لتبسيط عملياتك وزيادة الكفاءة.",
+    "it.automation.title": "التحول الرقمي",
+    "it.automation.desc": "حلول رقمية شاملة بما في ذلك تطوير البرمجيات لتحديث البنية التحتية لأعمالك.",
+    "it.marketing.title": "التسويق الرقمي",
+    "it.marketing.desc": "استراتيجيات تسويق قائمة على البيانات مصممة لتوسيع نطاق وصولك وإشراك جمهورك المستهدف بفعالية.",
+    "products.title": "محفظة مواد البناء",
     "products.subtitle": "حلول الأخشاب الهندسية والطبيعية المتميزة والمصممة لتميز البناء.",
     "products.mdf.name": "MDF",
     "products.mdf.description": "خشب هندسي متعدد الاستخدامات يوفر سطحًا أملسًا مثاليًا للطلاء والتصنيع الدقيق والأثاث الراقي.",
@@ -80,5 +98,15 @@
     "whyus.list2": "تجنب الأخطاء المكلفة في الشراء أو تنفيذ المشروع.",
     "whyus.list3": "الوصول إلى موردين عالميين موثوقين ومواد خام عالية الجودة.",
     "whyus.list4": "اتخاذ قرارات فنية وتجارية واثقة بتوجيه مهني.",
-    "whyus.conclusion": "بفضل خبرتنا الطويلة في إسبانيا والشرق الأوسط وأوروبا، نجلب رؤية واسعة وشبكة قوية لكل مشروع. في مجموعة بزرگی، لسنا مجرد موردين — نحن مستشارو الأخشاب الموثوق بهم وشركاؤك الاستراتيجيون في كل خطوة من خطوات اتخاذ القرار."
+    "whyus.conclusion": "بفضل خبرتنا الطويلة في إسبانيا والشرق الأوسط وأوروبا، نجلب رؤية واسعة وشبكة قوية لكل مشروع. في مجموعة بزرگی، لسنا مجرد موردين — نحن مستشارو الأخشاب الموثوق بهم وشركاؤك الاستراتيجيون في كل خطوة من خطوات اتخاذ القرار.",
+    "property.title": "الاستشارات العقارية",
+    "property.subtitle": "نقدم لك الاستشارة لتعرف بالضبط متى وأين وكيف تستثمر في العقارات.",
+    "property.when.title": "متى",
+    "property.when.desc": "تحليل خبير لدورات السوق لتحديد توقيت الشراء أو البيع أو الإيجار بشكل مثالي.",
+    "property.where.title": "أين",
+    "property.where.desc": "تحديد أفضل المواقع ذات الإمكانات العالية للنمو وعائد الاستثمار.",
+    "property.what.title": "شراء، بيع أو إيجار",
+    "property.what.desc": "نصيحة استراتيجية حول ما إذا كنت تريد شراء أو بيع أو استئجار العقارات بناءً على أهدافك.",
+    "property.who.title": "مع من",
+    "property.who.desc": "ربطك بشركاء ووكلاء وأصحاب مصلحة موثوقين يمكنك الاعتماد عليهم."
 }
