--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,21 +1,39 @@
 {
     "header.about": "About Us",
-    "header.products": "Products",
+    "header.products": "Materials",
+    "header.property": "Real Estate",
+    "header.it": "IT & AI",
     "header.history": "History",
-    "header.humanity": "Humanity First",
+    "header.humanity": "Humanity",
     "header.contact": "Contact",
-    "hero.subtitle": "Global Experts in Wood Sourcing & Strategic Consulting",
+    "hero.subtitle": "Global Experts in Wood Sourcing, Property Consulting & IT Solutions",
     "hero.motto": "Business Without Boundaries",
     "hero.scroll": "Discover More",
     "about.title": "About Bozorgi Group",
-    "about.description": "Since 1988, Bozorgi Group has operated under the motto \"Business Without Boundaries.\" We are a premier trading house specializing in the global import, export, and strategic distribution of high-quality building materials.",
+    "about.description": "Since 1988, Bozorgi Group has operated under the motto \"Business Without Boundaries.\" We have evolved into a multi-faceted conglomerate specializing in Building Materials, Property Consulting, and IT Solutions.",
     "about.missionTitle": "Our Mission",
-    "about.missionText": "To supply superior building materials with unmatched service and competitive pricing, expanding our global footprint through advanced international management systems.",
+    "about.missionText": "To supply superior building materials, expert property advice, and cutting-edge IT solutions with unmatched service and integrity.",
     "about.visionTitle": "Our Vision",
-    "about.visionText": "To lead the global building materials market by upholding our core values of honesty, transparency, and operational excellence on every front.",
+    "about.visionText": "To lead globally across our three pillars of business by upholding our core values of honesty, transparency, and operational excellence.",
     "about.valuesTitle": "Core Values",
     "about.valuesText": "Honesty, loyalty, clarity, and continuous learning. We prioritize humanity and mutual benefit, fostering transparent relationships with all our partners.",
-    "products.title": "Our Products",
+    "departments.title": "Our Business Divisions",
+    "departments.subtitle": "Three distinct departments working in harmony to deliver excellence.",
+    "departments.materials.title": "Building Materials",
+    "departments.materials.desc": "Global sourcing, import/export, and expert consulting for wood and construction materials.",
+    "departments.property.title": "Property Consulting",
+    "departments.property.desc": "Strategic advice for real estate investment, management, buying, selling, and renting.",
+    "departments.it.title": "IT & AI Solutions",
+    "departments.it.desc": "Cutting-edge AI, automation, and digital marketing services to empower businesses.",
+    "it.title": "IT, AI & Digital Transformation",
+    "it.subtitle": "Leveraging the power of Artificial Intelligence and Automation to drive business growth.",
+    "it.ai.title": "AI & Automation",
+    "it.ai.desc": "We implement intelligent agents and workflow automation to streamline your operations and increase efficiency.",
+    "it.automation.title": "Digital Transformation",
+    "it.automation.desc": "Comprehensive digital solutions including software development to modernize your business infrastructure.",
+    "it.marketing.title": "Digital Marketing",
+    "it.marketing.desc": "Data-driven marketing strategies designed to expand your reach and engage your target audience effectively.",
+    "products.title": "Building Materials Portfolio",
     "products.subtitle": "Premium engineered and natural wood solutions tailored for construction excellence.",
     "products.mdf.name": "MDF",
     "products.mdf.description": "Versatile engineered wood offering a smooth surface ideal for painting, precision machining, and high-end furniture.",
@@ -80,5 +98,15 @@
     "whyus.list2": "Avoid costly mistakes in purchasing or project execution.",
     "whyus.list3": "Gain access to trusted global suppliers and high-quality raw materials.",
     "whyus.list4": "Make confident technical and business decisions with professional guidance.",
-    "whyus.conclusion": "With long-term experience across Spain, the Middle East, and Europe, we bring a broad vision and solid network to every project. At Bozorgi Group, we are not just suppliers — we are your trusted wood consultants and strategic partners in every step of the decision-making process."
+    "whyus.conclusion": "With long-term experience across Spain, the Middle East, and Europe, we bring a broad vision and solid network to every project. At Bozorgi Group, we are not just suppliers — we are your trusted wood consultants and strategic partners in every step of the decision-making process.",
+    "property.title": "Property Consulting",
+    "property.subtitle": "We consult you to know exactly when, where, and how to invest in real estate.",
+    "property.when.title": "When",
+    "property.when.desc": "Expert analysis on market cycles to time your purchase, sale, or lease perfectly.",
+    "property.where.title": "Where",
+    "property.where.desc": "Identifying the best locations with the highest potential for growth and ROI.",
+    "property.what.title": "Buy, Sell, or Rent",
+    "property.what.desc": "Strategic advice on whether to buy, sell, or rent properties based on your goals.",
+    "property.who.title": "Who",
+    "property.who.desc": "Connecting you with trusted partners, agents, and stakeholders you can rely on."
 }
