--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -1,21 +1,39 @@
 {
     "header.about": "Sobre Nosotros",
-    "header.products": "Productos",
+    "header.products": "Materiales",
+    "header.property": "Inmobiliaria",
+    "header.it": "Soluciones IT",
     "header.history": "Historia",
-    "header.humanity": "Humanidad Primero",
+    "header.humanity": "Humanidad",
     "header.contact": "Contacto",
-    "hero.subtitle": "Expertos Globales en Abastecimiento de Madera y Consultoría Estratégica",
+    "hero.subtitle": "Expertos Globales en Abastecimiento de Madera, Consultoría Inmobiliaria y Soluciones IT",
     "hero.motto": "Negocios Sin Fronteras",
     "hero.scroll": "Descubra Más",
     "about.title": "Sobre Bozorgi Group",
-    "about.description": "Desde 1988, Bozorgi Group opera bajo el lema \"Negocios Sin Fronteras\". Somos una casa comercial líder especializada en la importación, exportación y distribución estratégica de materiales de construcción de alta calidad.",
+    "about.description": "Desde 1988, Bozorgi Group opera bajo el lema \"Negocios Sin Fronteras\". Hemos evolucionado hacia un conglomerado multifacético especializado en Materiales de Construcción, Consultoría Inmobiliaria y Soluciones IT.",
     "about.missionTitle": "Nuestra Misión",
-    "about.missionText": "Suministrar materiales de construcción superiores con un servicio inigualable y precios competitivos, expandiendo nuestra huella global a través de sistemas de gestión internacional avanzados.",
+    "about.missionText": "Suministrar materiales de construcción superiores, asesoramiento inmobiliario experto y soluciones IT de vanguardia con un servicio e integridad inigualables.",
     "about.visionTitle": "Nuestra Visión",
-    "about.visionText": "Liderar el mercado global de materiales de construcción manteniendo nuestros valores fundamentales de honestidad, transparencia y excelencia operativa.",
+    "about.visionText": "Liderar globalmente a través de nuestros tres pilares de negocio manteniendo nuestros valores fundamentales de honestidad, transparencia y excelencia operativa.",
     "about.valuesTitle": "Valores Fundamentales",
     "about.valuesText": "Honestidad, lealtad, claridad y aprendizaje continuo. Priorizamos la humanidad y el beneficio mutuo, fomentando relaciones transparentes con todos nuestros socios.",
-    "products.title": "Nuestros Productos",
+    "departments.title": "Nuestras Divisiones Comerciales",
+    "departments.subtitle": "Tres departamentos distintos trabajando en armonía para ofrecer excelencia.",
+    "departments.materials.title": "Materiales de Construcción",
+    "departments.materials.desc": "Abastecimiento global, importación/exportación y consultoría experta para madera y materiales de construcción.",
+    "departments.property.title": "Consultoría Inmobiliaria",
+    "departments.property.desc": "Asesoramiento estratégico para inversión inmobiliaria, gestión, compra, venta y alquiler.",
+    "departments.it.title": "Soluciones IT y IA",
+    "departments.it.desc": "Servicios de vanguardia en IA, automatización y marketing digital para potenciar las empresas.",
+    "it.title": "IT, IA y Transformación Digital",
+    "it.subtitle": "Aprovechando el poder de la Inteligencia Artificial y la Automatización para impulsar el crecimiento empresarial.",
+    "it.ai.title": "IA y Automatización",
+    "it.ai.desc": "Implementamos agentes inteligentes y automatización de flujos de trabajo para agilizar sus operaciones y aumentar la eficiencia.",
+    "it.automation.title": "Transformación Digital",
+    "it.automation.desc": "Soluciones digitales integrales, incluido el desarrollo de software, para modernizar su infraestructura empresarial.",
+    "it.marketing.title": "Marketing Digital",
+    "it.marketing.desc": "Estrategias de marketing basadas en datos diseñadas para ampliar su alcance e involucrar a su público objetivo de manera efectiva.",
+    "products.title": "Portafolio de Materiales",
     "products.subtitle": "Soluciones de madera natural y de ingeniería de primera calidad adaptadas para la excelencia en la construcción.",
     "products.mdf.name": "MDF",
     "products.mdf.description": "Madera de ingeniería versátil que ofrece una superficie lisa ideal para pintura, mecanizado de precisión y muebles de alta gama.",
@@ -80,5 +98,15 @@
     "whyus.list2": "Evitar errores costosos en la compra o ejecución de proyectos.",
     "whyus.list3": "Obtener acceso a proveedores globales de confianza y materias primas de alta calidad.",
     "whyus.list4": "Tomar decisiones técnicas y comerciales con confianza y guía profesional.",
-    "whyus.conclusion": "Con experiencia a largo plazo en España, Oriente Medio y Europa, aportamos una visión amplia y una red sólida a cada proyecto. En Bozorgi Group, no somos solo proveedores — somos sus consultores de confianza y socios estratégicos en cada paso del proceso de toma de decisiones."
+    "whyus.conclusion": "Con experiencia a largo plazo en España, Oriente Medio y Europa, aportamos una visión amplia y una red sólida a cada proyecto. En Bozorgi Group, no somos solo proveedores — somos sus consultores de confianza y socios estratégicos en cada paso del proceso de toma de decisiones.",
+    "property.title": "Consultoría Inmobiliaria",
+    "property.subtitle": "Le asesoramos para saber exactamente cuándo, dónde y cómo invertir en bienes raíces.",
+    "property.when.title": "Cuándo",
+    "property.when.desc": "Análisis experto de los ciclos del mercado para programar su compra, venta o alquiler a la perfección.",
+    "property.where.title": "Dónde",
+    "property.where.desc": "Identificando las mejores ubicaciones con el mayor potencial de crecimiento y retorno de inversión.",
+    "property.what.title": "Comprar, Vender o Alquilar",
+    "property.what.desc": "Asesoramiento estratégico sobre si comprar, vender o alquilar propiedades según sus objetivos.",
+    "property.who.title": "Quién",
+    "property.who.desc": "Conectándolo con socios, agentes y partes interesadas de confianza en los que puede confiar."
 }
