--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -7,6 +7,9 @@
     "header.humanity": "الإنسانية",
     "header.contact": "اتصل بنا",
     "hero.subtitle": "خبراء عالميون في توريد الأخشاب، والاستشارات العقارية، وحلول تكنولوجيا المعلومات",
+    "hero.materials.subtitle": "توريد أجود أنواع الأخشاب ومواد البناء من جميع أنحاء العالم لاحتياجاتك المعمارية.",
+    "hero.property.subtitle": "اتخاذ قرارات عقارية ذكية مع تحليل السوق القائم على البيانات والاستشارات المتخصصة.",
+    "hero.it.subtitle": "تمكين عملك باستخدام الجيل القادم من الذكاء الاصطناعي والاستراتيجيات الرقمية.",
     "hero.motto": "تجارة بلا حدود",
     "hero.scroll": "اكتشف المزيد",
     "about.title": "عن مجموعة بزرگی",
@@ -108,5 +111,7 @@
     "property.what.title": "شراء، بيع أو إيجار",
     "property.what.desc": "نصيحة استراتيجية حول ما إذا كنت تريد شراء أو بيع أو استئجار العقارات بناءً على أهدافك.",
     "property.who.title": "مع من",
-    "property.who.desc": "ربطك بشركاء ووكلاء وأصحاب مصلحة موثوقين يمكنك الاعتماد عليهم."
+    "property.who.desc": "ربطك بشركاء ووكلاء وأصحاب مصلحة موثوقين يمكنك الاعتماد عليهم.",
+    "property.strategy.title": "نهجنا الاستراتيجي",
+    "property.strategy.desc": "نحن لا نجد العقارات فحسب؛ نحن نحلل الأسواق. يتيح لنا فهمنا العميق للوائح المحلية في الشرق الأوسط وأوروبا إرشادك خلال المعاملات المعقدة بسهولة، مما يضمن أن استثمارك آمن ومربح."
 }
